--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,44 +1,23 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Admin panel</a>
-  <button
-    id="botonMenu"
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarCollapse"
-    aria-controls="navbarCollapse"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+    <a class="navbar-brand" href="#">Admin panel</a>
+    <button id="botonMenu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <!-- <li class="nav-item active">
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <!-- <li class="nav-item active">
         <a class="nav-link" href="#"
           >Home <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item"><a class="nav-link" href="#">Link</a></li> -->
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Usuario
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <!-- <a class="dropdown-item" href="#">Ver</a> -->
-          <a
-            class="dropdown-item"
-            (click)="asignarOpcion('usuarioVer')"
-            data-target="#navbarCollapse"
-            >Ver</a
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <!-- <a class="dropdown-item" href="#">Ver</a> -->
+                    <a class="dropdown-item" (click)="asignarOpcion('usuarioVer')" data-target="#navbarCollapse">Ver</a
           >
           <a class="dropdown-item" (click)="asignarOpcion('usuarioAnadir')"
             >Añadir usuario</a
@@ -46,10 +25,13 @@
           <a
             class="dropdown-item"
             (click)="asignarOpcion('usuarioAnadirTrabajo')"
-            >Añadir trabajo</a
+            >Asignar trabajo</a
           >
           <a class="dropdown-item" (click)="asignarOpcion('usuarioModificar')"
-            >Modificar</a
+            >Modificar datos</a
+          >
+          <a class="dropdown-item" (click)="asignarOpcion('usuarioArchivar')"
+            >Archivar</a
           >
           <a class="dropdown-item" (click)="asignarOpcion('usuarioBorrar')"
             >Borrar</a
@@ -69,17 +51,25 @@
         >
           Trabajo
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" (click)="asignarOpcion('trabajoVer')">Ver</a>
-          <a class="dropdown-item" (click)="asignarOpcion('trabajoAnadir')"
-            >Añadir</a
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" (click)="asignarOpcion('trabajoVer')">Ver</a>
+                        <a class="dropdown-item" (click)="asignarOpcion('trabajoAnadir')">Añadir</a
           >
           <a class="dropdown-item" (click)="asignarOpcion('trabajoModificar')">Modificar</a>
-          <a class="dropdown-item" (click)="asignarOpcion('trabajoBorrar')">Borrar</a>
-        </div>
-      </li>
-    </ul>
-    <!-- <form class="form-inline mt-2 mt-md-0">
+                        <a class="dropdown-item" (click)="asignarOpcion('trabajoBorrar')">Borrar</a>
+                    </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Listados
+        </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" (click)="asignarOpcion('trabajoVer')">Trabajo</a>
+                    <a class="dropdown-item" (click)="asignarOpcion('trabajoAnadir')">Trabajador</a>
+                </div>
+            </li>
+        </ul>
+        <!-- <form class="form-inline mt-2 mt-md-0">
       <input
         class="form-control mr-sm-2"
         type="text"
@@ -90,14 +80,14 @@
         Search
       </button>
     </form> -->
-  </div>
+        </div>
 </nav>
 
 <div class="container" style="overflow-y: scroll; margin-top: 25px;">
-  <br />
-  <br />
+    <br />
+    <br />
 
-  <!--
+    <!--
     <div class="jumbotron">
       <h1>Navbar example</h1>
       <p class="lead">
@@ -114,12 +104,6 @@
     </div>
   -->
 
-  <app-usuario
-    *ngIf="opcionSeleccionada"
-    [opcionUsuario]="opcionSeleccionada"
-  ></app-usuario>
-  <app-trabajo
-    *ngIf="opcionSeleccionada"
-    [opcionUsuario]="opcionSeleccionada"
-  ></app-trabajo>
+    <app-usuario *ngIf="opcionSeleccionada" [opcionUsuario]="opcionSeleccionada"></app-usuario>
+    <app-trabajo *ngIf="opcionSeleccionada" [opcionUsuario]="opcionSeleccionada"></app-trabajo>
 </div>
