--- a/src/app/admin/usuario/usuario.component.html
+++ b/src/app/admin/usuario/usuario.component.html
@@ -125,7 +125,7 @@
                 <th scope="row">
                     <br>
                     <h3>
-                        <a class="btn btn-sm btn-primary" (click)="anadirTrabajoUsuario(usuarioSeleccionado.id,item.id); getTrabajosUsuario(false,usuarioSeleccionado.id); presentAlert('Ok','Trabajo asignado a ','',''); "><span class="glyphicon glyphicon-ok-circle"></span> Añadir trabajo</a>
+                        <a class="btn btn-sm btn-primary" (click)="anadirTrabajoUsuario(usuarioSeleccionado.id,item.id); getTrabajosUsuario(false,usuarioSeleccionado.id); presentAlert('Ok','Trabajo asignado correctamente ','',''); "><span class="glyphicon glyphicon-ok-circle"></span> Añadir trabajo</a>
                     </h3>
                     <br>
                 </th>
@@ -167,25 +167,49 @@ Editar usuario
         <form>
             <div class="form-group">
                 <label for="exampleInputNombre">Nombre</label>
-                <input type="text" class="form-control" id="exampleInputNombre" aria-describedby="ApellidosHelp" placeholder="Nombre" [value]="usuarioSeleccionado.nombre" />
+                <input type="text" class="form-control" id="exampleInputNombre" aria-describedby="ApellidosHelp" placeholder="Nombre" [value]="usuarioSeleccionado.nombre" #nombreUsuarioMod/>
             </div>
             <div class="form-group">
                 <label for="exampleInputApellidos">Apellidos</label>
-                <input type="text" class="form-control" id="exampleInputApellidos" aria-describedby="ApellidosHelp" placeholder="Apellidos" [value]="usuarioSeleccionado.apellidos" />
+                <input type="text" class="form-control" id="exampleInputApellidos" aria-describedby="ApellidosHelp" placeholder="Apellidos" [value]="usuarioSeleccionado.apellidos" #apellidosUsuarioMod />
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail" placeholder="Email" [value]="usuarioSeleccionado.email" />
+                <input type="email" class="form-control" id="exampleInputEmail" placeholder="Email" [value]="usuarioSeleccionado.email" #emailUsuarioMod />
             </div>
             <div class="form-group">
                 <label for="exampleInputPass">Contraseña</label>
-                <input type="text" class="form-control" id="exampleInputPass" placeholder="Contraseña" [value]="usuarioSeleccionado.contrasena" />
+                <input type="text" class="form-control" id="exampleInputPass" placeholder="Contraseña" [value]="usuarioSeleccionado.contrasena" #contrasenaUsuarioMod />
             </div>
-            <button class="btn btn-info">Guardar cambios</button>
+            <button class="btn btn-info" (click)="editarUsuario(nombreUsuarioMod.value, apellidosUsuarioMod.value, emailUsuarioMod.value, contrasenaUsuarioMod.value);">Guardar cambios</button>
         </form>
     </div>
 </div>
 
+<!-- usuarioArchivar -->
+<div *ngIf="opcionUsuario == 'usuarioArchivar'">
+
+    <div class="input-group mb-3">
+        <!-- [(ngModel)]="terminoBusqueda" -->
+        <input type="text" class="form-control" #buscarTextoBorrarUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2" />
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="getUsuarioPorNombre(buscarTextoBorrarUsuario.value)">
+          Buscar
+        </button>
+        </div>
+    </div>
+    <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{ item.nombre }}</div>
+        <div class="card-body">
+            <h5 class="card-title">{{ usuarioSeleccionado.email }}</h5>
+            <p>Nombre: {{ usuarioSeleccionado.nombre }}</p>
+            <p>Apellidos: {{ usuarioSeleccionado.apellidos }}</p>
+            <p>Contraseña: {{ usuarioSeleccionado.contrasena }}</p>
+            <p>Rol: {{ usuarioSeleccionado.rol }}</p>
+        </div>
+    </div>
+
+</div>
 <!-- usuarioBorrar -->
 <div *ngIf="opcionUsuario == 'usuarioBorrar'">
 
