--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,10 +3,10 @@ textarea {
     overflow: hidden;
     /* demo only: */
     padding: 10px;
-    width: 250px;
+    width: 100%;
     font-size: 14px;
     margin: 50px auto;
     display: block;
     border-radius: 10px;
-    border: 6px solid #556677;
+    // border: 6px solid #556677;
 }
